<resources>
    <string name="app_name">Blacklight</string>
    <string name="project_blacklight">project blacklight</string>
    <string name="blacklight">blacklight</string>
    <string name="Blacklight">Blacklight</string>
    <string name="retailer_intro">Grow\nYour Business</string>
    <string name="customer_intro">A one-stop shop\nfor all your customers</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_up_and_start_shopping">Sign up and start shopping</string>
    <string name="sign_up_and_start_selling">Sign up and start selling</string>
    <string name="create_your_personal_n_shopping_account">Create your personal\nshopping account</string>
    <string name="create_your_merchant_n_shopping_account">Create your \nmerchant account</string>
    <string name="sign_up_email_address">Email Address</string>
    <string name="sign_up_username">What should we call you?</string>
    <string name="sign_up_merchant_name">What should we call your store?</string>
    <string name="sign_up_password">Password</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="sign_in_and_continue_shopping">Sign in and continue shopping</string>
    <string name="sign_in_now">Sign In Now</string>
    <string name="main_start_shopping">start shopping</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="or_sign_up_with">or sign up with</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="merchant">Merchant</string>
    <string name="customer">Customer</string>
    <string name="phone_number">Phone number</string>
    <string name="google_social_sign_in">Google Social Sign In</string>
    <string name="twitter_social_sign_in">Twitter Social Sign In</string>
    <string name="title_activity_merchant_store">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_orders_dashboard">Orders Dashboard</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_new_product">New Product</string>
    <string name="become_a_merchant">Become a merchant</string>
    <string name="sign_in_a_merchant">Sign in as a merchant</string>
    <string name="no_i_want_to_start_shopping">No, I want to start shopping</string>
    <string name="sign_in_a_customer">Sign in as a customer</string>
    <string name="sign_in_and_continue_selling_n_you_may_have_pending_orders">Sign in and continue selling.\n You may have pending orders</string>
    <string name="home_search_title">home_search_title</string>
    <string name="home_more_options">home more options</string>
    <string name="add_a_profile_picture">Add a profile picture</string>
    <string name="tap_to_add_image">Tap to add image</string>
    <string name="edit_your_shipping_details">Edit Your Shipping Details</string>
    <string name="first_name">First name</string>
    <string name="second_name">Second name</string>
    <string name="county">County</string>
    <string name="sub_county">Sub-County</string>
    <string name="town_or_city">Town or City</string>
    <string name="pick_up_spot">Pick up spot</string>
    <string name="save_now">Save Now</string>
    <string name="phones_and_tablets">Phones and Tablets</string>
    <string name="add_inventory">Add Inventory</string>
    <string name="laptops_and_pcs">Laptops and PCs</string>
    <string name="tvs_and_monitors">TVs and Monitors</string>
    <string name="accessories">Accessories</string>
    <string name="kitchen_appliances">Kitchen Appliances</string>
    <string name="new_inventory_image">New Inventory Image</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="product_price">Product Price</string>
    <string name="save_new_product">Save New Product</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="sign_out">Sign Out</string>
    <string name="username">Username</string>
    <string name="feedback">Feedback</string>
    <string name="profile">Profile</string>
    <string name="orders">Orders</string>
    <string name="cart">Cart</string>
    <string name="shop_by_category">Shop by category</string>
    <string name="settings">Settings</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="checkout">Checkout</string>
    <string name="total_amount">Total amount:</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="order_price">Order price</string>
    <string name="finalize_order">Finalize order</string>
    <string name="your_pending_order_n_will_be_delivered_soon">Your pending order\n will be delivered soon...</string>
    <string name="new_orders">New Orders</string>
    <string name="give_feedback_or_report_a_bug">Give feedback or report a bug via email</string>
    <string name="Report_a_bug">Give feedback or report a bug</string>
    <string name="subject">Subject</string>
    <string name="from">From</string>
    <string name="send_now">Send Now</string>
    <string name="order_date_and_time">Order Date and Time</string>
    <string name="order_details">Order Details</string>
    <string name="search_for_products_or_store">Search for products or store</string>
    <string name="food_and_drinks">Food and Drinks</string>
    <string name="stationary">Stationary</string>
    <string name="e_books">E-books</string>
    <string name="toiletries">Toiletries</string>
    <string name="alcohol_and_cocktails">Alcohol and Cocktails</string>
    <string name="movies_and_tv_series">Movies and TV Series</string>
</resources>