<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/merchant_store_orders"
        android:icon="@drawable/ic_baseline_local_offer_24"
        android:title="@string/merchant"
        app:showAsAction="always"
        android:onClick="showMerchantOrders"/>

    <item
        android:id="@+id/merchant_store_profile"
        android:icon="@drawable/ic_baseline_person_pin_24"
        android:title="@string/profile"
        app:showAsAction="ifRoom"
        android:onClick="sendToMerchantProfile"/>

    <item
        android:id="@+id/merchant_store_sign_out"
        android:icon="@drawable/ic_baseline_power_settings_new_24"
        android:title="@string/sign_out"
        app:showAsAction="always"
        android:onClick="signOutMerchant"/>

</menu>