<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#000000"
    android:padding="30dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/main_logo"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/project_blacklight"
            android:foregroundGravity="center"
            android:src="@drawable/project_blacklight" />

        <TextView
            android:id="@+id/retailer_introduction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/retailer_intro"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textAllCaps="true"/>
        <TextView
            android:id="@+id/customer_introduction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/raleway_medium"
            android:text="@string/customer_intro"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <Button
                android:id="@+id/main_sign_in"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/raleway_medium"
                android:background="@drawable/filled_button"
                android:onClick="sendToSignIn"/>
            <Button
                android:id="@+id/main_sign_up"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/raleway_medium"
                android:backgroundTint="@color/white"
                android:onClick="sendToSignUp"/>

        </LinearLayout>

        <Button
            android:id="@+id/main_shopping_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/black"
            android:shadowColor="@color/orange_primary"
            android:text="@string/main_start_shopping"
            android:fontFamily="@font/raleway_medium"
            android:textColor="@color/white"
            android:onClick="startShopping"/>

    </LinearLayout>

</ScrollView>