<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MerchantSignInActivity"
    android:background="@color/black">

    <TextView
        android:id="@+id/merchant_welcome_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/raleway_bold"
        android:gravity="center_horizontal"
        android:text="@string/welcome_back"
        android:maxLines="2"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.189" />

    <TextView
        android:id="@+id/merchant_continue_selling"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/raleway_medium"
        android:gravity="center_horizontal"
        android:text="@string/sign_in_and_continue_selling_n_you_may_have_pending_orders"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.289"
        app:layout_constraintTop_toBottomOf="@+id/merchant_welcome_back"/>


    <EditText
        android:id="@+id/sign_in_merchant_phone_number"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="284dp"
        android:autofillHints="test@blacklight.com"
        android:background="@drawable/input_text_design"
        android:hint="@string/phone_number"
        android:fontFamily="@font/raleway_medium"
        android:inputType="phone"
        android:textColor="@color/black"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/merchant_continue_selling"
        app:layout_constraintVertical_bias="0.119" />

    <EditText
        android:id="@+id/sign_in_merchant_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="200dp"
        android:autofillHints="test@blacklight.com"
        android:background="@drawable/input_text_design"
        android:hint="@string/sign_up_password"
        android:fontFamily="@font/raleway_medium"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_merchant_phone_number"
        app:layout_constraintVertical_bias="0.119" />


    <LinearLayout
        android:id="@+id/sign_in_merchant_extras"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_merchant_password">

        <CheckBox
            android:id="@+id/sign_in_merchant_checkbox"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:checked="false"
            android:text="@string/remember_me"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/sign_in_merchant_forgot_password"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:layout_weight="2"
            android:textAlignment="textEnd"
            android:gravity="end"
            android:textSize="15sp"
            />


    </LinearLayout>

    <Button
        android:id="@+id/sign_in_merchant_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/sign_in_now"
        android:fontFamily="@font/raleway_medium"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="3dp"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_merchant_extras"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="489dp"
        android:onClick="signInExistingMerchantAccount"/>

    <Button
        android:id="@+id/sign_in_customer_option"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="2dp"
        android:text="@string/sign_in_a_customer"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:fontFamily="@font/raleway_medium"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_merchant_button"
        app:layout_constraintVertical_bias="0.108"
        android:onClick="sentToCustomerSignIn"/>


    <TextView
        android:id="@+id/sign_in_merchant_extra_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/raleway_medium"
        android:gravity="center_horizontal"
        android:text="@string/or_sign_in_with"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_customer_option"
        app:layout_constraintVertical_bias="0.108" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_merchant_extra_options"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/sign_in_merchant_with_google_social"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginStart="100dp"
            android:padding="7dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:src="@drawable/google"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_merchant_extra_options"
            app:layout_constraintVertical_bias="1.0"
            android:contentDescription="@string/google_social_sign_in"/>

        <ImageView
            android:id="@+id/sign_in_merchant_with_twitter_social"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginEnd="100dp"
            android:padding="5dp"
            android:layout_weight="1"
            android:src="@drawable/twitter_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_merchant_extra_options"
            app:layout_constraintVertical_bias="1.0"
            android:contentDescription="@string/twitter_social_sign_in"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>